--- a/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
@@ -109,8 +109,8 @@ Note that Bader and Cong's spanning tree algorithm contains over 300 lines of C 
 
 PRAM algorithms and algorithms with coarse-grain parallelism can be easily expressed in \Xten{}. Here we consider two other variants of the spanning tree algorithm, that is, parallel BFS and the Shiloach-Vishkin algorithm (SV).  Parallel BFS is similar to the sequential version except that the expansion of the frontiers is executed by coordinating processors in parallel. SV is representative of several connectivity algorithms in that it adapts the widely-used
 graft-and-shortcut approach. Through carefully designed grafting
-schemes, the algorithm achieves complexities of \bigO{\log n} time and
-\bigO{(m+n)\log n} work under the arbitrary CRCW PRAM model. SV starts with $n$ isolated vertices. In each round, it inspects the edge $(u,v)$, and grafts vertex $u$ to $v$ under the condition that $u<v$. The edge that causes the grafting is labeled as a tree edge. At the end of each round, vertices that are connected by tree edges are compacted into supervertices. The process is iterated until only one vertex is left. Both parallel DFS and SV utilize fine-grained parallelism, and they can be easily expressed in \Xten{}. The appropriate aggregation and scheduling of activities are left to its runtime support. \Xten{} provides more epxressive ways to sepcify the parallelism of an algorithm, compared with other parallel languages, for example CILK and UPC.
+schemes, the algorithm achieves complexities of $O(\log n)$ time and
+$O((m+n)\log n)$ work under the arbitrary CRCW PRAM model. SV starts with $n$ isolated vertices. In each round, it inspects the edge $(u,v)$, and grafts vertex $u$ to $v$ under the condition that $u<v$. The edge that causes the grafting is labeled as a tree edge. At the end of each round, vertices that are connected by tree edges are compacted into supervertices. The process is iterated until only one vertex is left. Both parallel DFS and SV utilize fine-grained parallelism, and they can be easily expressed in \Xten{}. The appropriate aggregation and scheduling of activities are left to its runtime support. \Xten{} provides more epxressive ways to sepcify the parallelism of an algorithm, compared with other parallel languages, for example CILK and UPC.
 
 %\label{s:trav-dist}
 
