--- a/x10.runtime.cws/paper/ics08/perf-eval.tex
+++ b/x10.runtime.cws/paper/ics08/perf-eval.tex
@@ -39,24 +39,24 @@ version of SV running in time for the submission.)
 
 \begin{figure}
  \begin{tabular}{ccc}
- \pdfimage width 8cm {altair.dfs.pdf} &
- \pdfimage width 8cm {moxie.dfs.pdf} 
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/BFS/random/altair-bfs-random.jpg}&
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/DFS/random/altair-dfs-random.jpg}\\
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/BFS/kgraph/altair-bfs-kgraph.jpg}&
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/DFS/kgraph/altair-dfs-kgraph.jpg}\\
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/BFS/torus/altair-bfs-torus.jpg}&
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/DFS/torus/altair-dfs-torus.jpg} \\
+
  \end{tabular}
-\caption{Psuedo-DFS for altair and moxie}
+\caption{Psuedo-DFS and BFS for altair}\label{DFS-altair}\label{BFS-altair}
 \end{figure}
 
 \begin{figure}
  \begin{tabular}{ccc}
- \pdfimage width 8cm {altair.bfs.pdf} &
- \pdfimage width 8cm {moxie.bfs.pdf} 
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/SV/random/altair-sv-random.jpg}&
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/SV/kgraph/altair-sv-kgraph.jpg}\\
+ \pdfimage width 9cm {../IPDPS08/plotdata/altair/SV/torus/altair-sv-torus.jpg}\\
  \end{tabular}
-\caption{BFS for altair and moxie}
+\caption{SV for altair}\label{SV-altair}
 \end{figure}
 
-\begin{figure}
- \begin{tabular}{ccc}
- \pdfimage width 8cm {altair.sv.pdf} &
- \pdfimage width 8cm {moxie.sv.pdf} 
- \end{tabular}
-\caption{SV for altair and moxie}
-\end{figure}
+
